# natura

./: .gitignore  Cargo.toml  LICENSE  README.md  action.yaml
.github/: copilot-instructions.md
bevy-natura/: Cargo.toml
bevy-natura/src/: lib.rs
examples/bevy-simple/: Cargo.toml
examples/bevy-simple/.cargo/: config.toml
examples/bevy-simple/assets/fonts/: PixelSmall.txt
examples/bevy-simple/src/: main.rs
examples/coffee-2d/: Cargo.toml
examples/coffee-2d/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
natura/: Cargo.toml
natura-samples/: Cargo.toml
natura-samples-coffee/: Cargo.toml
natura-samples-coffee/src/: main.rs
natura-samples/src/: main.rs
natura/src/: lib.rs  projectile.rs  spring.rs  sprite.rs
